assignment-41-kubernetes-runtime-security/k8s/manifests/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: insecure-pod
  labels:
    app: insecure
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      privileged: true
