assignment-41-kubernetes-runtime-security/k8s/manifests/secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
  labels:
    app: secure
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - name: nginx
    image: nginx:1.25
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
